--- a/tmux/Darwin/.tmux.conf
+++ b/tmux/Darwin/.tmux.conf
@@ -20,7 +20,7 @@ set-option -g focus-events on
 set-option -s set-clipboard off
 bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
 bind-key @ join-pane -h -s !
-bind-key '#' selectl '356a,362x91,0,0{243x91,0,0,4,118x91,244,0[118x45,244,0,1,118x45,244,46,2]}'
+bind-key '#' run-shell "tmux select-layout even-vertical; tmux split-window -fbh -l '60%' '' ; tmux swap-pane -D; tmux kill-pane"
 
 # Setup 'v' to begin selection as in Vim
 bind-key -Tcopy-mode-vi 'v' send -X begin-selection
@@ -101,8 +101,8 @@ set-option -g status-style fg=colour136,bg=colour235 #yellow and base02
 #set-window-option -g window-status-current-style bright
 
 # pane border
-set-option -g pane-border-style fg=colour235 #base02
-set-option -g pane-active-border-style fg=colour240 #base01
+set-option -g pane-border-style fg=colour100 #base02
+set-option -g pane-active-border-style fg=colour229 #base01
 
 # message text
 set-option -g message-style fg=colour166,bg=colour235 #orange and base02
