--- a/tmux/Darwin/.tmux.conf
+++ b/tmux/Darwin/.tmux.conf
@@ -19,8 +19,10 @@ set-option -g mouse on
 set-option -g focus-events on
 set-option -s set-clipboard off
 bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
-bind-key @ join-pane -h -s !
-bind-key '#' run-shell "tmux select-layout even-vertical; tmux split-window -fbh -l '66%' '' ; tmux swap-pane -D; tmux kill-pane"
+# bind-key @ join-pane -h -s !
+bind-key '#' select-layout main-vertical \; resize-pane -t 1 -x '66%'
+bind-key '@' select-layout main-vertical \; resize-pane -t 1 -x '50%'
+
 
 # Setup 'v' to begin selection as in Vim
 bind-key -Tcopy-mode-vi 'v' send -X begin-selection
