--- a/.config/pickls/pickls.yaml
+++ b/.config/pickls/pickls.yaml
@@ -125,6 +125,9 @@ languages:
   shell script: *sh
   bash: *sh
   toml:
+    formatters:
+      - program: taplo
+        args: ["format", "--stdin-filepath", "$filename", "-"]
     linters:
       - program: tomllint
         args: ["-"]
