--- a/tmux/Darwin/.tmux.conf
+++ b/tmux/Darwin/.tmux.conf
@@ -1,7 +1,7 @@
 # improve colors
 set -g base-index 1
 set-window-option -g pane-base-index 1
-set-option -g history-limit 40000
+set-option -g history-limit 1000000
 set -s escape-time 0
 
 # act like vim
@@ -64,10 +64,10 @@ set -g status-right ''
 set -g status-right-length 50
 set -g status-left-length 20
 
-set -g window-status-style fg=colour240,bg=default
-set -g window-status-current-style fg=colour15,bg=colour28
+set -g window-status-style fg=colour231,bg=default
+set -g window-status-current-style fg=colour15,bg=colour31
 setw -g window-status-current-format ' #I#[fg=colour250]:#[fg=colour255]#W#[fg=colour50]#F '
-setw -g window-status-format ' #I#[fg=colour237]:#[fg=colour250]#W#[fg=colour244]#F '
+setw -g window-status-format ' #I#[fg=colour229]:#[fg=colour250]#W#[fg=colour244]#F '
 
 # ==================
 # {n}vim compability
