--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,19 @@ bin/bin/wim-key
 .config/swiftpm/*
 .config/zed/*
 .config/zed/.*
+.config/.gsd-keyboard.settings-ported
+.config/Signal/
+.config/dconf/
+.config/evolution/
+.config/gnome-initial-setup-done
+.config/google-chrome/
+.config/gtk-3.0/
+.config/ibus/
+.config/mimeapps.list
+.config/monitors.xml
+.config/monitors.xml~
+.config/pulse/
+.config/solana/
+.config/user-dirs.dirs
+.config/user-dirs.locale
+
