--- a/.gitignore
+++ b/.gitignore
@@ -12,38 +12,39 @@ bin/bin/fak
 bin/bin/protonum
 bin/bin/wim
 bin/bin/wim-key
-.config/walrus/*
+.config/.gsd-keyboard.settings-ported
+.config/Signal/
 .config/asciinema/*
-.config/op/*
-.config/gcloud/*
-.config/k9s/*
 .config/btop/*
 .config/clojure/*
+.config/dconf/
+.config/evolution/
+.config/gcloud/*
 .config/github-copilot
 .config/glab-cli/*
+.config/gnome-initial-setup-done
+.config/google-chrome/
+.config/graphite
+.config/gtk-3.0/
 .config/htop/*
+.config/ibus/
 .config/iterm2/*
+.config/k9s/*
 .config/karabiner/*
 .config/karabiner/**
 .config/kitty/*
-.config/nvim/spell
-.config/pip/*
-.config/swiftpm/*
-.config/zed/*
-.config/zed/.*
-.config/.gsd-keyboard.settings-ported
-.config/Signal/
-.config/dconf/
-.config/evolution/
-.config/gnome-initial-setup-done
-.config/google-chrome/
-.config/gtk-3.0/
-.config/ibus/
 .config/mimeapps.list
 .config/monitors.xml
 .config/monitors.xml~
+.config/nvim/spell
+.config/op/*
+.config/pip/*
 .config/pulse/
 .config/solana/
+.config/swiftpm/*
 .config/user-dirs.dirs
 .config/user-dirs.locale
+.config/walrus/*
+.config/zed/*
+.config/zed/.*
 
