--- a/tmux/Darwin/.tmux.conf
+++ b/tmux/Darwin/.tmux.conf
@@ -3,6 +3,8 @@ set -g base-index 1
 set-window-option -g pane-base-index 1
 set-option -g history-limit 1000000
 set -s escape-time 0
+set-option -g focus-events on
+
 
 # act like vim
 setw -g mode-keys vi
