--- a/.config/pickls/pickls.yaml
+++ b/.config/pickls/pickls.yaml
@@ -130,10 +130,10 @@ languages:
         use_stdin: true
   shell script: *sh
   bash: *sh
-  yaml:
-    formatters:
-      - program: yamlfmt # github.com/google/yamlfmt
-        args: ["-in"]
+  # yaml:
+  #   formatters:
+  #     - program: yamlfmt # github.com/google/yamlfmt
+  #       args: ["-in"]
   toml:
     formatters:
       - program: taplo
