--- a/tmux/Darwin/.tmux.conf
+++ b/tmux/Darwin/.tmux.conf
@@ -1,7 +1,7 @@
 # improve colors
 set -g base-index 1
 set-window-option -g pane-base-index 1
-set-option -g history-limit 1000000
+set-option -g history-limit 100000
 set -s escape-time 0
 set-option -g focus-events on
 
