--- a/tmux/Darwin/.tmux.conf
+++ b/tmux/Darwin/.tmux.conf
@@ -17,6 +17,10 @@ bind C-k select-pane -U
 bind C-b last-window
 bind \; last-window
 
+# Map Ctrl-c to copy visible contents to tmux buffer and system clipboard
+# TODO: port to linux config: bind -n C-c capture-pane -J \; save-buffer /tmp/tmux-buffer-copy \; run-shell "xclip -sel clip < /tmp/tmux-buffer-copy"
+bind C-c capture-pane -J \; save-buffer /tmp/tmux-buffer-copy \; run-shell "pbcopy < /tmp/tmux-buffer-copy"
+
 set-option -g mouse on
 set-option -g focus-events on
 set-option -s set-clipboard off
