--- a/tmux/Darwin/.tmux.conf
+++ b/tmux/Darwin/.tmux.conf
@@ -75,6 +75,9 @@ set -g window-status-current-style fg=colour15,bg=colour31
 setw -g window-status-current-format ' #I#[fg=colour250]:#[fg=colour255]#W#[fg=colour50]#F '
 setw -g window-status-format ' #I#[fg=colour229]:#[fg=colour250]#W#[fg=colour244]#F '
 
+set -g window-style 'fg=colour247,bg=colour236'
+set -g window-active-style 'fg=colour250,bg=black'
+
 # ==================
 # {n}vim compability
 # MacOS ships with a very old ncurses and terminfo. May need to update terminfo to recognize tmux-256color.
