--- a/bash/.gitconfig
+++ b/bash/.gitconfig
@@ -1,8 +1,12 @@
 [user]
 	email = williambbradley@gmail.com
 	name = Will Bradley
+  signingkey = AE6C32FE234214518A99B63E0FF845E0416DA190
+[commit]
+	verbose = true
+  gpgsign = true
 [log]
-  showSignature = false
+  showSignature = true
 [color]
   diff = always
   ui = true
@@ -43,5 +47,4 @@
 	trustExitCode = true
 [credential]
 	helper = store
-[commit]
-	verbose = true
+
