--- a/.gitignore
+++ b/.gitignore
@@ -12,41 +12,4 @@ bin/bin/fak
 bin/bin/protonum
 bin/bin/wim
 bin/bin/wim-key
-.config/.gsd-keyboard.settings-ported
-.config/Signal/
-.config/asciinema/*
-.config/btop/*
-.config/clojure/*
-.config/dconf/
-.config/evolution/
-.config/gcloud/*
-.config/github-copilot
-.config/glab-cli/*
-.config/gh/*
-.config/gnome-initial-setup-done
-.config/google-chrome/
-.config/graphite
-.config/gtk-3.0/
-.config/htop/*
-.config/ibus/
-.config/iterm2/*
-.config/k9s/*
-.config/karabiner/*
-.config/karabiner/**
-.config/kitty/*
-.config/mimeapps.list
-.config/monitors.xml
-.config/monitors.xml~
-.config/nvim/spell
-.config/op/*
-.config/pip/*
-.config/pulse/
-.config/solana/
-.config/suiup/*
-.config/swiftpm/*
-.config/user-dirs.dirs
-.config/user-dirs.locale
-.config/walrus/*
-.config/zed/*
-.config/zed/.*
-
+.config/*
